# TP-C-Cpp-HW1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: install.sh  run.sh
linters/: run.sh
project/: CMakeLists.txt
project/include/: module.h  utils.h
project/src/: main.c  module.c  utils.c
project/test/include/: moc.hpp  utils.hpp
project/test/src/: base_tests.cpp  main.cpp  moc.cpp  utils.cpp
project/test/test_data/test1/: INPUT.txt  OUTPUT.txt
project/test/test_data/test2/: INPUT.txt  OUTPUT.txt
project/test/test_data/test3/: INPUT.txt  OUTPUT.txt
